--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+@keyframes loading {
+  0% { width: 0; }
+  100% { width: 100%; }
+}
+
+.animate-loading {
+  animation: loading 0.5s linear infinite;
+}
